[gd_scene format=3 uid="uid://bnt0x2atitjy4"]

[ext_resource type="Script" uid="uid://btk0heslwdsdl" path="res://scenes/characters/players/character.gd" id="1_1bdar"]
[ext_resource type="Texture2D" uid="uid://hvtketacwvwl" path="res://icon.svg" id="1_x31xa"]
[ext_resource type="Script" uid="uid://ccpfg8mkwq6u6" path="res://scenes/characters/states/sm_character.gd" id="3_2qjml"]
[ext_resource type="BlackboardPlan" uid="uid://jquj81t3d3xq" path="res://resources/character/player_blackboard.tres" id="3_y3q2w"]
[ext_resource type="Script" uid="uid://bl58xmmt8lpct" path="res://scenes/characters/states/on_ground.gd" id="4_ma1fs"]
[ext_resource type="Script" uid="uid://c835gp74gd31s" path="res://scenes/characters/states/in_air.gd" id="5_ma1fs"]
[ext_resource type="Script" uid="uid://b7lmgww4w6p4" path="res://resources/character/CoyoteTimer.gd" id="5_oxdt7"]
[ext_resource type="Resource" uid="uid://cp2xagdfik1wc" path="res://resources/character/PlayerHorizontalMovement.tres" id="6_al1dr"]
[ext_resource type="Script" uid="uid://b3scqiwxsp3ai" path="res://scenes/characters/states/dash.gd" id="6_eqpns"]
[ext_resource type="Script" uid="uid://c7cdvchn6xmqc" path="res://scenes/characters/states/jump_state.gd" id="8_fwqwt"]
[ext_resource type="Script" uid="uid://dshk7xfko5k4n" path="res://scenes/characters/players/input_processor.gd" id="8_ymfos"]
[ext_resource type="Texture2D" uid="uid://djhvm2ypm6j4n" path="res://assets/characters/wings/TestWingSpriteSheet.png" id="12_yqo81"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_al1dr"]
size = Vector2(10, 15.624997)

[sub_resource type="Resource" id="Resource_ymfos"]
script = ExtResource("5_oxdt7")
metadata/_custom_type_script = "uid://b7lmgww4w6p4"

[sub_resource type="Curve" id="Curve_fwqwt"]
_data = [Vector2(0.12666667, 1), 0.0, 0.0, 0, 0, Vector2(0.21666667, 0.99499995), 0.0, 0.0, 0, 0, Vector2(0.43666667, 0), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_y3q2w"]

[sub_resource type="Animation" id="Animation_yqo81"]
resource_name = "DoubleJump_00"
length = 0.50000167
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wings:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.50000167),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wings:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.18333334, 0.23333333, 0.38333333, 0.43333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_3omnj"]
resource_name = "DoubleJump_01"
length = 0.50000167
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wings:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.50000167),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wings:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.11666667, 0.17524472, 0.23333333, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 4, 0, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_7lw86"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wings:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wings:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7lw86"]
_data = {
&"DoubleJump_00": SubResource("Animation_yqo81"),
&"DoubleJump_01": SubResource("Animation_3omnj"),
&"RESET": SubResource("Animation_7lw86")
}

[node name="Character" type="CharacterBody2D" unique_id=608707863]
script = ExtResource("1_1bdar")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1579326263]
position = Vector2(-0.9999981, -50.5)
scale = Vector2(0.5, 0.7890625)
texture = ExtResource("1_x31xa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1548995392]
position = Vector2(1.1368684e-13, -50)
scale = Vector2(6.4, 6.4)
shape = SubResource("RectangleShape2D_al1dr")

[node name="SM_Character" type="LimboHSM" parent="." unique_id=1789133882 node_paths=PackedStringArray("character", "input_processor")]
blackboard_plan = ExtResource("3_y3q2w")
script = ExtResource("3_2qjml")
character = NodePath("..")
input_processor = NodePath("../input_processor")

[node name="OnGround" type="LimboState" parent="SM_Character" unique_id=1913486763 node_paths=PackedStringArray("character", "input_processor")]
blackboard_plan = ExtResource("3_y3q2w")
script = ExtResource("4_ma1fs")
horizontal_movement = ExtResource("6_al1dr")
character = NodePath("../..")
input_processor = NodePath("../../input_processor")
coyote_timer = SubResource("Resource_ymfos")

[node name="InAir" type="LimboState" parent="SM_Character" unique_id=366118137 node_paths=PackedStringArray("character", "ground_state", "input_processor", "animation_player")]
script = ExtResource("5_ma1fs")
character = NodePath("../..")
ground_state = NodePath("../OnGround")
horizontal_movement = ExtResource("6_al1dr")
input_processor = NodePath("../../input_processor")
animation_player = NodePath("../../AnimationPlayer")

[node name="DashState" type="LimboState" parent="SM_Character" unique_id=476023899 node_paths=PackedStringArray("input_processor")]
script = ExtResource("6_eqpns")
input_processor = NodePath("../../input_processor")
metadata/_custom_type_script = "uid://b3scqiwxsp3ai"

[node name="JumpState" type="LimboState" parent="SM_Character" unique_id=685114196 node_paths=PackedStringArray("air_state", "input_processor", "character")]
script = ExtResource("8_fwqwt")
jump_duration = 1.0
jump_max_speed = 550.0
jump_curve = SubResource("Curve_fwqwt")
air_state = NodePath("../InAir")
horizontal_movement = ExtResource("6_al1dr")
input_processor = NodePath("../../input_processor")
character = NodePath("../..")
metadata/_custom_type_script = "uid://c7cdvchn6xmqc"

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=319241558]
tree_root = SubResource("AnimationNodeBlendSpace2D_y3q2w")
parameters/blend_position = Vector2(0, 0)

[node name="input_processor" type="Node" parent="." unique_id=656449399]
script = ExtResource("8_ymfos")

[node name="Camera2D" type="Camera2D" parent="." unique_id=80016861]
zoom = Vector2(0.6, 0.6)
limit_smoothed = true
position_smoothing_enabled = true

[node name="wings" type="Sprite2D" parent="." unique_id=2074299470]
position = Vector2(0, -55)
texture = ExtResource("12_yqo81")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1279856151]
libraries/ = SubResource("AnimationLibrary_7lw86")
